feat: 新增健康檢查路徑、加上跨域請求
